# MinimalCoupler

./: .clang-format  .gitignore  CMakeLists.txt  FunctionDescription.md  README.md  design.md  run.sh
.github/workflows/: smoke-test.yml
archive/fluid/: FluidParticipantImpl.cpp  FluidParticipantImpl.hpp
archive/solid/: SolidParticipantImpl.cpp  SolidParticipantImpl.hpp
comm/: communicator.hpp
couplingscheme/: coupling.cpp  coupling.hpp
data/: Mesh.cpp  Mesh.hpp  Point.cpp  Point.hpp
docs/: FunctionDescription.md
fluid/: FluidParticipantImpl.cpp  FluidParticipantImpl.hpp
impl/: ParticipantImpl.cpp  ParticipantImpl.hpp
include/precice/: Exceptions.hpp  Participant.hpp  Types.hpp  Version.h  export.h  precice.hpp  span.hpp  types.hpp
logger/: logger.cpp  logger.hpp
mapping/: NearestNeighbor.cpp  NearestNeighbor.hpp
minimalcoupler/: Participant.hpp
participant/: Participant.cpp  Participant.hpp
precice/: precice.cpp  precice.hpp  types.hpp
solid/: SolidParticipantImpl.cpp  SolidParticipantImpl.hpp
src/: Aitken.cpp  Aitken.hpp  Mesh.cpp  Mesh.hpp  NearestNeighbor.cpp  NearestNeighbor.hpp  Participant.cpp  Participant.hpp  ParticipantImpl.cpp  ParticipantImpl.hpp  Point.hpp  Utils.cpp  Utils.hpp  constants.hpp  coupling.cpp  coupling.hpp  logger.cpp  logger.hpp  socketutils.hpp
src/precice/: Participant.cpp  precice.cpp  precice.hpp
tests/: CMakeLists.txt  solverdummy.cpp
utils/: constants.hpp  socketutils.hpp
